[gd_scene load_steps=8 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://player.png" type="Texture" id=2]
[ext_resource path="res://PlayerBody.gd" type="Script" id=3]
[ext_resource path="res://PlayerArea.gd" type="Script" id=4]
[ext_resource path="res://SpeedControls.gd" type="Script" id=5]
[ext_resource path="res://vt323/vt323.tres" type="DynamicFont" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6 )

[node name="World" type="Node2D"]
position = Vector2( 0, -8.45535 )
script = ExtResource( 1 )

[node name="PlayerBody" type="KinematicBody2D" parent="."]
position = Vector2( 0, 109.161 )
scale = Vector2( 4, 4 )
z_index = 999
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="PlayerBody"]
position = Vector2( -1, -8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
position = Vector2( -1, -6 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="PlayerBody"]
margin_left = -31.7364
margin_right = 223.264
margin_bottom = 43.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "KinematicBody2D"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PlayerArea" type="Area2D" parent="."]
position = Vector2( 0, 237.666 )
z_index = 999
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="PlayerArea"]
position = Vector2( -4, -32 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( -4, -24 )
scale = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="PlayerArea"]
anchor_right = 0.492
margin_left = -50.2877
margin_top = 2.7341
margin_right = 51.7123
margin_bottom = 45.7341
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Area2D"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SpeedControls" type="HBoxContainer" parent="."]
margin_right = 134.0
margin_bottom = 49.0
grow_vertical = 0
size_flags_horizontal = 2
alignment = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="DecreaseButton" type="Button" parent="SpeedControls"]
margin_right = 29.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 6 )
text = "-"

[node name="SpeedLabel" type="Label" parent="SpeedControls"]
margin_left = 33.0
margin_top = 3.0
margin_right = 101.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 6 )
text = "1234"
align = 1
valign = 1

[node name="IncreaseButton" type="Button" parent="SpeedControls"]
margin_left = 105.0
margin_right = 134.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 6 )
text = "+"
[connection signal="button_up" from="SpeedControls/DecreaseButton" to="SpeedControls" method="_on_DecreaseButton_button_up"]
[connection signal="button_up" from="SpeedControls/IncreaseButton" to="SpeedControls" method="_on_IncreaseButton_button_up"]
